--- a/roletaMatemática/index.html
+++ b/roletaMatemática/index.html
@@ -13,6 +13,8 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
+      overflow-y: hidden;
+      overflow-x: hidden;
     }
 
     .roleta {
