--- a/roletaMatemática/index.html
+++ b/roletaMatemática/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Roleta Lying Table</title>
   <style>
     * {
@@ -10,8 +10,6 @@
     }
 
     body {
-      margin: 0;
-      padding: 0;
       background: #111;
       color: white;
       font-family: sans-serif;
@@ -20,23 +18,22 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
+      margin: 0;
     }
 
     .roleta {
       position: relative;
-      width: 95vw;
-      height: 95vw;
-      max-width: 360px;
-      max-height: 360px;
+      width: 80vw;
+      height: 80vw;
+      max-width: 300px;
+      max-height: 300px;
       margin-bottom: 5vh;
     }
 
     .camara {
       position: absolute;
-      width: 20vw;
-      height: 20vw;
-      max-width: 70px;
-      max-height: 70px;
+      width: 16%;
+      height: 16%;
       border-radius: 50%;
       background-color: #666;
       display: flex;
@@ -44,7 +41,7 @@
       justify-content: center;
       font-weight: bold;
       color: white;
-      font-size: 6vw;
+      font-size: 4vw;
       transition: all 0.3s ease;
     }
 
@@ -63,17 +60,28 @@
     }
 
     button {
-      padding: 12px 28px;
+      padding: 2vh 4vw;
       font-size: 5vw;
       background-color: crimson;
       color: white;
       border: none;
-      border-radius: 10px;
+      border-radius: 8px;
       cursor: pointer;
     }
 
     button:hover {
       background-color: darkred;
+    }
+
+    @media (min-width: 600px) {
+      .camara {
+        font-size: 1.2em;
+      }
+
+      button {
+        font-size: 1em;
+        padding: 10px 20px;
+      }
     }
   </style>
 </head>
@@ -92,8 +100,8 @@
       const indiceBang = Math.floor(Math.random() * 6);
       cartuchos[indiceBang] = "BANG";
 
-      const centro = 47; // centro da roleta em %
-      const raio = 40;   // raio em %
+      const centro = 40; // em %
+      const raio = 30; // em %
 
       cartuchos.forEach((tipo, i) => {
         const ang = (360 / cartuchos.length) * i - 90;
