--- a/roletaMatemática/index.html
+++ b/roletaMatemática/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Roleta Lying Table</title>
+  <h1>ROLETA LIYNG TABLE</h1>
   <style>
     * {
       box-sizing: border-box;
@@ -25,8 +26,8 @@
       position: relative;
       width: 80vw;
       height: 80vw;
-      max-width: 300px;
-      max-height: 300px;
+      max-width: 400px;
+      max-height: 400px;
       margin-bottom: 5vh;
     }
 
@@ -80,7 +81,7 @@
 
       button {
         font-size: 1em;
-        padding: 10px 20px;
+        padding: 20px 50px;
       }
     }
   </style>
