--- a/roletaMatemática/index.html
+++ b/roletaMatemática/index.html
@@ -20,6 +20,8 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
+      overflow-y: hidden;
+      overflow-x: hidden;
     }
 
     .roleta {
